--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ ScaVecCNN.ipynb
 VanillaCNN.ipynb
 ScaVecMoment.ipynb
 __pycache__/moment_kernels.cpython-39.pyc
-
+__pycache__/benchmark_models.cpython-39.pyc
