--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,43 @@ benchmark/best_auc_VanillaCNN_dermamnist.pt
 benchmark/final_VanillaCNN_dermamnist.pt
 benchmark/metrics_VanillaCNN_dermamnist.json
 benchmark/train.sh
+benchmark/old_results/best_acc_RegularECNN_dermamnist0.pt
+benchmark/old_results/best_acc_TrivialECNN_dermamnist.pt
+benchmark/old_results/best_acc_TrivialECNN_dermamnist0.pt
+benchmark/old_results/best_acc_TrivialIrrepECNN_dermamnist.pt
+benchmark/old_results/best_acc_TrivialIrrepECNN_dermamnist0.pt
+benchmark/old_results/best_acc_TrivialIrrepMoment_dermamnist0.pt
+benchmark/old_results/best_acc_TrivialMoment_dermamnist.pt
+benchmark/old_results/best_acc_TrivialMoment_dermamnist0.pt
+benchmark/old_results/best_acc_VanillaCNN_dermamnist.pt
+benchmark/old_results/best_acc_VanillaCNN_dermamnist0.pt
+benchmark/old_results/best_auc_RegularECNN_dermamnist0.pt
+benchmark/old_results/best_auc_TrivialECNN_dermamnist.pt
+benchmark/old_results/best_auc_TrivialECNN_dermamnist0.pt
+benchmark/old_results/best_auc_TrivialIrrepECNN_dermamnist.pt
+benchmark/old_results/best_auc_TrivialIrrepECNN_dermamnist0.pt
+benchmark/old_results/best_auc_TrivialIrrepMoment_dermamnist0.pt
+benchmark/old_results/best_auc_TrivialMoment_dermamnist.pt
+benchmark/old_results/best_auc_TrivialMoment_dermamnist0.pt
+benchmark/old_results/best_auc_VanillaCNN_dermamnist.pt
+benchmark/old_results/best_auc_VanillaCNN_dermamnist0.pt
+benchmark/old_results/final_RegularECNN_dermamnist0.pt
+benchmark/old_results/final_TrivialECNN_dermamnist.pt
+benchmark/old_results/final_TrivialECNN_dermamnist0.pt
+benchmark/old_results/final_TrivialIrrepECNN_2_dermamnist.pt
+benchmark/old_results/final_TrivialIrrepECNN_dermamnist0.pt
+benchmark/old_results/final_TrivialIrrepMoment_dermamnist.pt
+benchmark/old_results/final_TrivialMoment_dermamnist0.pt
+benchmark/old_results/final_VanillaCNN_dermamnist.pt
+benchmark/old_results/final_VanillaCNN_dermamnist0.pt
+benchmark/old_results/metrics_RegularECNN_dermamnist0.json
+benchmark/old_results/metrics_TrivialECNN_dermamnist.json
+benchmark/old_results/metrics_TrivialECNN_dermamnist0.json
+benchmark/old_results/metrics_TrivialIrrepECNN_dermamnist0.json
+benchmark/old_results/metrics_TrivialIrrepMoment_dermamnist.json
+benchmark/old_results/metrics_TrivialMoment_dermamnist.json
+benchmark/old_results/metrics_TrivialMoment_dermamnist0.json
+benchmark/old_results/metrics_VanillaCNN_dermamnist.json
+benchmark/old_results/metrics_VanillaCNN_dermamnist0.json
+benchmark/.ipynb_checkpoints/benchmark-checkpoint.ipynb
+run*
