Added figures and code for equivariance over more rotations on circular images

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ benchmark/old_results/metrics_VanillaCNN_dermamnist.json
 benchmark/old_results/metrics_VanillaCNN_dermamnist0.json
 benchmark/.ipynb_checkpoints/benchmark-checkpoint.ipynb
 results
+benchmark/.cometml-runs/d6b5f5a7741b45c6957280edf8e1972f-TJVUSC.zip
