--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ benchmark/__pycache__/E2CNN_models.cpython-39.pyc
 benchmark/testing.ipynb
 benchmark/benchfigures.sh
 benchmark/benchtrain.sh
+benchmark/__pycache__/benchmark_models2.cpython-39.pyc
