removed print line from moment kernels, implement unet and moment_unet

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ benchmark/scripts/train.sh
 utils/__pycache__/data.cpython-39.pyc
 models/__pycache__/__init__.cpython-39.pyc
 models/__pycache__/benchmark_models2.cpython-39.pyc
+models/__pycache__/moment_unet.cpython-39.pyc
+models/__pycache__/unet.cpython-39.pyc
