latest changes to unet

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ models/__pycache__/__init__.cpython-39.pyc
 models/__pycache__/benchmark_models2.cpython-39.pyc
 models/__pycache__/moment_unet.cpython-39.pyc
 models/__pycache__/unet.cpython-39.pyc
+utils/__pycache__/data.cpython-310.pyc
