complete unet training script - hausdorff calculation fix needed still

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ models/__pycache__/benchmark_models2.cpython-39.pyc
 models/__pycache__/moment_unet.cpython-39.pyc
 models/__pycache__/unet.cpython-39.pyc
 utils/__pycache__/data.cpython-310.pyc
+segmentation/scripts/segm.log
+segmentation/scripts/train.sh
